# mini-projeto-ip-magic-library

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  build.sh
docs/: documentacao-funcoes.md  test-cases.md
include/: arquivos.h  biblioteca.h  criptografia.h  encryption.h  files.h  library.h  structs.h  utils.h
src/: CMakeLists.txt  build.sh  encryption.c  files.c  library.c  main.c  utils.c
